--- a/assets/css/styles_internal.css
+++ b/assets/css/styles_internal.css
@@ -25298,6 +25298,39 @@ input[name="currently_working_on"] {
     float: unset;
 }
 
+/* Login form avatar select */
+#avatarSelect .selected-box {
+    border: none !important;
+    cursor: pointer;
+}
+
+#avatarSelect .component-icon {
+    display: none;
+}
+
+#avatarSelect .icon {
+    background: none !important;
+    width: 40px !important;
+    height: 40px !important;
+    border: none !important;
+    margin: 0 !important;
+}
+
+div#avatarSelect-box-scroll {
+    width: 425px;
+    padding: 10px;
+    text-align: center;
+    z-index: 9;
+    height: auto;
+    position: absolute;
+    top: -88px;
+    left: 0px;
+}
+
+.text-required {
+    color: red;
+}
+
 .message-restriction {
     font-size: 12px;
     line-height: 14px;
